--- a/resume.html
+++ b/resume.html
@@ -7,12 +7,13 @@
   <body>
     <h1>Joel Lev-Tov</h1>
     <h1><strong> Journalist & AV Technician </strong> </h1>
+    <img src="LEV_4631.jpg" alt="A photo of me" width="300">
     <div id="contact"> 
         <p>
             joellevtov@gmail.com <br>
-            https://www.linkedin.com/in/joel-lev-tov-0688a9197/ <br>
-            https://twitter.com/joellefttoe <br>
-            https://github.com/joellevtov <br>
+            <a href="https://www.linkedin.com/in/joel-lev-tov-0688a9197/" target="_blank"> My LinkedIn Page</a> <br>
+            <a href="https://twitter.com/joellefttoe" target="_blank"> My Twitter page</a> <br>
+            <a href="https://github.com/joellevtov" target="_blank"> My Github page</a> <br>
         </p>
     </div>
         
