--- a/resume.html
+++ b/resume.html
@@ -39,8 +39,6 @@
             <li> Bachelor of Arts, Journalism, University of Maryland, 2024</li>
             <li> International Baccalaureate Diploma, Springbrook High School, 2020 </li>
         </ul>
-    
-    
 
     <h2>Skills</h2>
         <ul>
@@ -48,5 +46,6 @@
             <li>Photography</li>
             <li>Audio reporting</li>
     </ul>
+      <p><a href="#contact"> Contact me </a></p>
     </body>
 </html>
