--- a/resume.html
+++ b/resume.html
@@ -6,11 +6,12 @@
   </head>
   <body>
     <h1>Joel Lev-Tov</h1>
+     (<!--I built this myself! -->)
     <h1><strong> Journalist & AV Technician </strong> </h1>
     <img src="LEV_4631.jpg" alt="A photo of me" width="300">
     <div id="contact"> 
         <p>
-            joellevtov@gmail.com <br>
+            <a href="mailto:joellevtov@gmail.com"> joellevtov@gmail.com </a> <br>
             <a href="https://www.linkedin.com/in/joel-lev-tov-0688a9197/" target="_blank"> My LinkedIn Page</a> <br>
             <a href="https://twitter.com/joellefttoe" target="_blank"> My Twitter page</a> <br>
             <a href="https://github.com/joellevtov" target="_blank"> My Github page</a> <br>
