--- a/styled-text.html
+++ b/styled-text.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="styledtext.css" type="text/css" rel="stylesheet">
+    <link href="stylingassignment.css" type="text/css" rel="stylesheet">
     <title>Stytled Text</title>
 </head>
     
