--- a/final-project/index.html
+++ b/final-project/index.html
@@ -16,7 +16,7 @@
     
 <body>
 <!--why isn't it showing my background image-->
-<div class="container-fluid home">
+<div class="container-fluid topper">
 
     <div class="row">
     <div class="col-12">
