--- a/final-project/index.html
+++ b/final-project/index.html
@@ -17,15 +17,9 @@
 <body>
 <!--why isn't it showing my background image-->
 <div class="container-fluid topper">
-
-    <div class="row">
-    <div class="col-12">
-    <div class="col-12"> 
-        <h1> University of Maryland Journalism Students of Color Feel out of Place in their own school </h1>
-    </div>
-    </div>
-    </div>
+        <h1 class="bottom" id="h1-topper"> University of Maryland Journalism Students of Color Feel out of Place in their own school </h1>
 </div>
+   
 <div class="container-fluid">
 <div class="row">
 <div class="col-12 description">
@@ -162,6 +156,8 @@
     <p> Rosa Pyo, a senior journalism major, is graduating this winter. She said she loves what she does, but is often frustrated by her institution, like all other journalists of color. </p>
 
     <p> “To be a journalist of color at Merrill is a joy, is an honor, and is a heartbreak,” she said.</p>
+    
+
 </div>   
 </div>
 </div>
